5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1800_2570.log
== SUBMITION (2019-06-12 12:32:04) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = (p * (abs(x[i]-m))
print(round(p**(1/h),3))
-- EXECUTION TIME:
0.852547
-- ERROR:
  File "/home/codebench/codes/1800/2570/main.py", line 8
    print(round(p**(1/h),3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:11) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = (p * (abs(x[i]-m))
print(round(p**(1/h),3))
-- ERROR:
File "XXXX", line 8
    print(round(p**(1/h),3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:53) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = (p * (abs(x[i]-m))
print(round(p**(1/h),3))
-- ERROR:
File "XXXX", line 8
    print(round(p**(1/h),3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:33:23) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = (p * (abs(x[i]-m))
k = p**(1/h)
print(round(k,3))
-- ERROR:
File "XXXX", line 8
    k = p**(1/h)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:33:42) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = p * (abs(x[i]-m)
k = p**(1/h)
print(round(k,3))
-- ERROR:
File "XXXX", line 8
    k = p**(1/h)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:34:19) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = p * (abs(x[i]-m)

print(round(p**(1/h),3))
-- ERROR:
File "XXXX", line 9
    print(round(p**(1/h),3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:35:21) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = p * abs(x[i]-m)

print(round(p**(1/h),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:35:28) 
-- CODE:
from numpy import *
x = array(eval(input("digite bro: ")))
m = sum(x)/size(x)
p = 1
h = size(x)
for i in range(size(x)):
	p = p * abs(x[i]-m)

print(round(p**(1/h),3))
-- EXECUTION TIME:
1.23141
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
